--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
-	url = https://github.com/foundry-rs/forge-std
+	url = https://github.com/foundry-rs/forge-std.git
+[submodule "lib/contracts"]
+	path = lib/contracts
+	url = https://github.com/thirdweb-dev/contracts
+[submodule "lib/reference"]
+	path = lib/reference
+	url = https://github.com/erc6551/reference
+[submodule "lib/erc-6551"]
+	path = lib/erc-6551
+	url = https://github.com/thirdweb-example/erc-6551
